--- a/src/assets/styles/Global.scss
+++ b/src/assets/styles/Global.scss
@@ -11,18 +11,18 @@
     --color-dark-green: #09d395;
     --color-dark-grey: #666771;
     /* Background colors */
-    --color-bg-main: #090d27;
-    --color-bg-primary: #181c3a;
-    --color-bg-active: #252a4a;
+    --color-bg-main: #2c2f36;
+    --color-bg-primary: #232529;
+    --color-bg-active: #1d8daf;
     /* Typography colors */
     --color-text-main: #ffffff;
     --color-text-secondary: #a1a1a1;
-    --color-text-inactive: #5e5f6a;
+    --color-text-inactive: #c7c7c7;
     --color-text-red: #f9053e;
     --color-text-green: #9dd562;
     --color-text-blue: #2fe29b;
     --color-input: #252a4a;
-    --color-text-footer: #42434e;
+    --color-text-footer: #888a9c;
     --color-border-main: #EAEAEA;
     --color-primary: #FF481C;
     --color-secondary: #D3D3D3;
